tetrate/tis601/e2e/bad-resource.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-bad-service
  namespace: default
spec:
  ports:
  - port: 80
    name: web
  - port: 443
    name: frontend 
  - port: 3306
    name: database
