tetrate/tis601/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-service-port-names-regex-test
spec:
  steps:
    - name: apply-kyverno-policy
      try:
        - apply:
            file: ../check-portname-conventions.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-good-deployment
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-bad-deployment (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
